# postgres-insert-performance-comparison-rust

./: Cargo.toml  compose.yaml
.devcontainer/: devcontainer.json
src/: main.rs
