[package]
name = "workspace"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tokio-postgres = { workspace = true }
sqlx = { workspace = true }
futures = "0.3.31"
url = "2.5.4"
itertools = "0.14.0"
bytes = "1.10.1"

[workspace.dependencies]
tokio = { version = "1.46.1", features = ["full"] }
tokio-postgres = { version = "0.7.13" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
